<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="Read_IMU" Id="{d407c8ca-ed7d-49b3-b4f1-11155beadaa1}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Read_IMU
VAR
	
	cSec		: WORD;
	pSec		: WORD;
	i			: INT := 1;
	j			: INT;
	
	TimeStr		: ARRAY [1..50] OF STRING;
	Trailer_ID	: ARRAY [1..50] OF UINT;
	RoadSec		: ARRAY [1..50] OF UINT;
	Pitch		: ARRAY [1..50] OF REAL;
	Roll		: ARRAY [1..50] OF REAL;
	AccX		: ARRAY [1..50] OF REAL;
	AccY		: ARRAY [1..50] OF REAL;
	AccZ		: ARRAY [1..50] OF REAL;
	
	cDiv	: UINT;
	pDiv	: UINT;

	
	
END_VAR

]]></Declaration>
    <Implementation>
      <ST><![CDATA[cDiv	:= Background_Time.cMil / 20; 
	
IF pSec <> Background_Time.cSec THEN 
	j := i;
	i := 1;
	pSec := Background_Time.cSec;
END_IF
	
IF pDiv <> cDiv THEN
	TimeStr[i]		:= Background_Time.TimeStr;
	Trailer_ID[i]	:= Read_ID.Trailer_ID;
	RoadSec[i]		:= Background_IMU.RoadSec;
	Pitch[i]		:= Background_IMU.Pitch;
	Roll[i]			:= Background_IMU.Roll;
	AccX[i]			:= Background_IMU.AccX;
	AccY[i]			:= Background_IMU.AccY;
	AccZ[i]			:= Background_IMU.AccZ;
	
	pDiv := cDiv;
	i := i+1;
	
END_IF;]]></ST>
    </Implementation>
    <LineIds Name="Read_IMU">
      <LineId Id="1022" Count="9" />
      <LineId Id="1066" Count="0" />
      <LineId Id="1064" Count="0" />
      <LineId Id="1032" Count="8" />
      <LineId Id="998" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>